tests/fixtures/invalid/pow_list_str_bool.py
# Cannot call pow() with List[int], Str, Bool
x = pow([1, 2, 3], "hello", True)
